# infra-smoke-tests

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Justfile  README.md
.github/: renovate.json5
.github/workflows/: json.yml  markdown.yml  rust.yml  yaml.yml
src/: assertion.rs  cli.rs  environment.rs  http_client.rs  main.rs  test_utils.rs
src/crates/: mod.rs  utils.rs
src/crates/crates_4891/: cloudfront_encoded.rs  cloudfront_space.rs  cloudfront_unencoded.rs  fastly_encoded.rs  fastly_space.rs  fastly_unencoded.rs  mod.rs
src/crates/crates_6164/: cloudfront.rs  config.rs  fastly.rs  mod.rs
src/crates/crates_api/: api_health.rs  config.rs  mod.rs
src/crates/crates_index/: config.rs  index_crates_io.rs  mod.rs
src/crates/db_dump/: cloudfront.rs  config.rs  fastly.rs  mod.rs
src/crates/issue_4891/: cloudfront_encoded.rs  cloudfront_space.rs  cloudfront_unencoded.rs  config.rs  fastly_encoded.rs  fastly_space.rs  fastly_unencoded.rs  mod.rs
src/releases/: mod.rs
src/releases/doc_router/: config.rs  mod.rs  redirect_minor_versions.rs  redirect_root.rs
src/releases/list_files/: cloudfront.rs  config.rs  fastly.rs  mod.rs
src/releases/rustup_sh/: cloudfront.rs  fastly.rs  mod.rs
src/rustup/: mod.rs
src/rustup/rustup_sh/: cloudfront.rs  config.rs  fastly.rs
src/rustup/win_rustup_rs/: aarch64.rs  config.rs  i686.rs  mod.rs  x86_64.rs
src/test/: mod.rs  test_group.rs  test_group_result.rs  test_result.rs  test_suite.rs  test_suite_result.rs
