[package]
name = "infra-smoke-test"

version = "0.1.0"
edition = "2021"

license = "MIT OR Apache-2.0"
description = "Smoke tests for the Rust project's infrastructure"
repository = "https://github.com/jdno/infra-smoke-test"

# The smoke tests are an internal tool developed and maintained by the
# infrastructure team of the Rust project.
publish = false

[dependencies]
async-trait = "0.1.78"
clap = { version = "4.5.3", features = ["derive"] }
getset = "0.1.2"
indent = "0.1.1"
reqwest = { version = "0.11.26", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
typed-builder = "0.18.1"

[dev-dependencies]
indoc = "2.0.4"
mockito = "1.4.0"
pretty_assertions = "1.4.0"
